feat(improvements) media queries and complete code-review

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,12 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
   overflow: hidden;
+  font-family: var(--font-mono);
 }
 
 .description {
@@ -17,6 +18,19 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+  margin-bottom: 4rem;
+}
+
+.buttons {
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  font-size: 1.1rem;
+  max-width: var(--max-width);
+  width: 100%;
+  z-index: 2;
+  font-family: var(--font-mono);
+  margin-bottom: 4rem;
 }
 
 .description a {
@@ -24,15 +38,6 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
 }
 
 .code {
